# msm-rtsp-stub

./: .gitmodules  Cargo.toml  Dockerfile  Dockerfile.arm  README.md  about.toml  build.rs  deny.toml  msm_cp.proto  rust-toolchain.toml
.github/: dependabot.yaml
.github/workflows/: artifacts.yaml  ci.yaml  msm-stub-actions.yaml
.jenkins/: Jenkinsfile  Jenkinsfile-old  Jenkinsfile.old  build-docker.sh
macros/: Cargo.toml  README.md
src/: client.rs  cp.rs  dp.rs  lib.rs  main.rs
