[workspace]
members = ["."]

[package]
name = "msm_rtsp_stub"
version = "0.0.1-dev"
authors = ["Giles Heron <giheron@cisco.com>"]
description = "RTSP Sidecar Stub Proxy written in Rust"
homepage = "https://github.com/media-streaming-mesh/msm-rtsp-stub"
repository = "https://github.com/media-streaming-mesh/msm-rtsp-stub"
readme = "README.md"
keywords = ["RTSP"]
license = "Apache-2.0"
edition = "2018"

[profile.release]
lto = true

[dependencies]
# Crates.io
async-recursion = "1.0.0"
async-stream = "0.3.3"
bytes = "1.3.0" 
clap = { version = "3.1.8", features = ["derive"] }
futures = "0.3.21"
http = "0.2.6"
h2 = "0.3"
log = "0.4.16"
once_cell = "1.10.0" 
prost = "0.9.0"
simple_logger = "2.1.0"
tokio = { version = "1.8.2", features = ["rt"] }
tonic = "0.9.1"
void = "1.0.2"
envmnt = "*"

[build-dependencies]
tonic-build = { version = "0.6.2", default_features = false, features = ["transport", "prost"] }
prost-build = "0.9.0"
