[workspace]
members = ["."]

[package]
name = "msm_rtsp_stub"
version = "0.0.2-dev"
authors = ["Giles Heron <giles@4mc.partners>"]
description = "RTSP Sidecar Stub Proxy written in Rust"
homepage = "https://github.com/media-streaming-mesh/msm-rtsp-stub"
repository = "https://github.com/media-streaming-mesh/msm-rtsp-stub"
readme = "README.md"
keywords = ["RTSP"]
license = "Apache-2.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
# Crates.io
async-recursion = "1.0.0"
async-stream = "0.3.3"
bytes = "1.3.0" 
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3.21"
h2 = "0.4.4"
log = "0.4.16"
once_cell = "1.10.0" 
prost = "0.13.3"
simple_logger = "5.0.0"
tokio = { version = "1.37.0", features = ["macros", "rt", "signal"] }
tokio-util = "0.7.10" 
tonic = "0.12.3"
void = "1.0.2"
envmnt = "*"

[build-dependencies]
tonic-build = { version = "0.12.3", default-features = false, features = ["transport", "prost"] }
prost-build = "0.13.3"
